[package]
name = "league-game-events"
version = "0.1.0"
license = "ISC"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"
itertools = "0.11"
log = "0.4"
systemd-journal-logger = "2.1.0"
simple_logger = "4.2.0"
